<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        style="@style/MyToolbarStyle" />

    <TextView
        android:id="@+id/oauthText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/oauth_text1"
        android:textColor="@color/gray_text" />

    <Button
        android:id="@+id/oauthButtonAccesstwitter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/oauth_button_accesstwitter"
        android:textColor="@android:color/white"
        android:background="@drawable/button_green" />

    <TextView
        android:id="@+id/oauthText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/oauth_text2"
        android:textColor="@color/gray_text" />

    <EditText
        android:id="@+id/oauthEditPincode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10" />

    <TextView
        android:id="@+id/oauthText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/oauth_text3"
        android:textColor="@color/gray_text" />

    <Button
        android:id="@+id/oauthButtonLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/oauth_button_login"
        android:textColor="@android:color/white"
        android:background="@drawable/button_green" />

</LinearLayout>